# Network-Architecture-of-APOBEC3-Driven-Mutagenesis-in-HPV-Head-and-Neck-Cancers

./: Question_1_workflow.md  Question_2_workflow.md  Question_3_workflow.md  Question_4_workflow.md  Question_5_workflow.md  Question_6_workflow.md  Question_7_workflow.md  README.md
environments/: Neoantigen.yml  Network.yml
envrionments/: Network.yml  RNA-seq_NovoGene.yml  environment_NETWORK_STEP_1.yml
scripts/HPV_ANALYSIS/: Diagnose_NORMAL_HPV16_ORF_reads.py  Diagnostic_Figure6_HostMarkers_and_IntegrationProxy.py  Diagnostic_Fusion_GSEA.py  Generate_Figure6_Lifecycle_Panels.py  Phase1_5_Index_Diagnostic.py  Phase1_HPV16_Data_Inventory.py  Phase1_HPV16_Data_Inventory_v2.py  Phase2_Raw_HPV16_Counts.py  Phase3_HPV16_Populations_and_Genome.py  Phase4_HPV16_Genome_Alignment.py  Phase5A_Population_Consolidation.py  Phase5A_Revised_Population_Discovery.py  Phase5A_v2_DEG_Analysis.py  Phase5B_Neoantigen_Pipeline.py  Phase5B_Prep_Neoantigen_Inputs.py  RUN_HPV_ANALYSIS.sh  RUN_PHASE_1.sh  RUN_STAR_ARRAY.sh  parse_chimeric_junctions.py  sample_list.txt
scripts/NEOANTIGEN/: Generate_Figure7_Panels.py  RUN_NEOANTIGEN_PIEPLINE.sh  Step01_Prep_Neoantigen_Inputs.py  Step02_SnpEff_Annotation.py  Step03_MHCflurry_Binding.py  Step04_Expression_Weighted_Ranking.py  Step04a_STAR_Chimeric_Align.sh  Step04b_Fusion_Analysis.py  Step05_Fusion_Analysis.py  (+4 more)
scripts/SINGLE_CELL/ClusterCatcher/: MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
scripts/SINGLE_CELL/ClusterCatcher/cli/: __init__.py  cli.py  create_config.py  run_config.py  sample_information.py
scripts/SINGLE_CELL/ClusterCatcher/snakemake_wrapper/: Snakefile  config.yaml
scripts/SINGLE_CELL/ClusterCatcher/snakemake_wrapper/envs/: kraken2.yaml  sc_post.yaml  sc_pre.yaml  scomatic.yaml  signatures.yaml
scripts/SINGLE_CELL/ClusterCatcher/snakemake_wrapper/rules/: scomatic_signatures.smk
scripts/SINGLE_CELL/ClusterCatcher/snakemake_wrapper/scripts/: SingleCellGenotype.py  cancer_cell_detection.py  cellranger_count.py  generate_summary.py  kraken2_viral_detection.py  scanpy_qc_annotation.py  scomatic_mutation_calling.py  signature_analysis.py  summarize_viral_detection.py  viral_integration.py
(+249 files in other folders)
